--- a/sparkcassandra-connector/pom.xml
+++ b/sparkcassandra-connector/pom.xml
@@ -14,7 +14,7 @@
          <dependency>
             <groupId>com.verizon.bda</groupId>
             <artifactId>dal</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-SNAPSHOT</version>
              <exclusions>
                  <exclusion>
                      <artifactId>guava</artifactId>
@@ -49,13 +49,13 @@
             <artifactId>cassandra-dao</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
-            <version>1.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.verizon.bda</groupId>
             <artifactId>cassandra-dao</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         
         <!-- Testing dependencies  -->
