--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -20,7 +20,13 @@
 			<artifactId>spark-core_${scala.binary.version}</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
-
+                
+                <dependency>
+                        <groupId>org.apache.spark</groupId>
+                        <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+                        <version>${spark.version}</version>
+                </dependency>
+                
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_${scala.binary.version}</artifactId>
