--- a/pom.xml
+++ b/pom.xml
@@ -542,7 +542,7 @@
         <version>0.7.0</version>
         <configuration>
           <verbose>false</verbose>
-          <failOnViolation>true</failOnViolation>
+          <failOnViolation>false</failOnViolation>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <failOnWarning>true</failOnWarning>
           <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
