--- a/couchbase-store/src/main/resources/cache.conf
+++ b/couchbase-store/src/main/resources/cache.conf
@@ -1,7 +1,7 @@
-cbc.url= "http://146.1.180.119:8091/pools"
+cbc.url= "http://cbc:8091/pools"
 #rest-cache
-cbc.pcache.bucket=rest
-cbc.pcache.pwd=bda123
+cbc.pcache.bucket=b1
+cbc.pcache.pwd=123wdxcs
 #global app cache
 #global app cache
 default.app.name="GlobalApps"
