--- a/framework/src/main/resources/couch.conf
+++ b/framework/src/main/resources/couch.conf
@@ -1,7 +1,7 @@
 cbc.url= "http://cbc:8091/pools"
 #rest-cache
-cbc.pcache.bucket=rest
-cbc.pcache.pwd=bda123
+cbc.pcache.bucket=t11
+cbc.pcache.pwd=werrte23
 #global app cache
 default.app.name="GlobalApps"
 cbc.gcache.pwd= ""
