added changes as per review comment

--- a/couchbase-store/src/main/resources/cache.conf
+++ b/couchbase-store/src/main/resources/cache.conf
@@ -1,7 +1,7 @@
 cbc.url= "http://cbc:8091/pools"
 #rest-cache
 cbc.pcache.bucket=b1
-cbc.pcache.pwd=123wdxcs
+cbc.pcache.pwd=pwd
 #global app cache
 #global app cache
 default.app.name="GlobalApps"
