--- a/framework/src/test/resources/local_cache.conf
+++ b/framework/src/test/resources/local_cache.conf
@@ -2,7 +2,7 @@ commons.cache.impl="com.verizon.bda.trapezium.store.cache.mock.MockCacheCBImpl"
 cbc.url= "http://localhost:60591/pools"
 #rest-cache
 cbc.pcache.bucket=rest
-cbc.pcache.pwd=bda123
+cbc.pcache.pwd=pwd
 #global app cache
 default.app.name="GlobalApps"
 cbc.gcache.pwd= ""
