--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <module>framework</module>
     <module>cassandra-dao</module>
     <module>sparkcassandra-connector</module>
+    <module>couchbase-store</module>
+    <module>cache</module>
   </modules>
   
   <properties>
