--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         
@@ -104,13 +104,13 @@
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>couchbase-store</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>couchbase-store</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
