License validation changes in ApplicationManager

--- a/couchbase-store/pom.xml
+++ b/couchbase-store/pom.xml
@@ -95,7 +95,7 @@
 
         <dependency>
             <groupId>com.verizon.bda</groupId>
-            <artifactId>cache</artifactId>
+            <artifactId>trapezium-cache</artifactId>
             <version>${cache.version}</version>
         </dependency>
 
