--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>sparkcassandra-connector</module>
     <module>couchbase-store</module>
     <module>cache</module>
+    <module>license-stub</module>
   </modules>
   
   <properties>
