--- a/framework/src/main/resources/eventworkflow.conf
+++ b/framework/src/main/resources/eventworkflow.conf
@@ -5,7 +5,7 @@ hdfsFileBatch = {
   batchTime = 5
   timerStartDelay = 1
   batchInfo = [
-    { name = "testTrigger"
+    { name = "TestTriggering"
       dataDirectory = {
         local ="src/test/data/hdfs/midmsmall/"
         saiphdevqa = "/midm/"
@@ -29,7 +29,7 @@ hdfsFileBatch = {
 transactions = [{
   transactionName = "com.verizon.bda.trapezium.framework.apps.TestTriggering"
   inputData = [{
-    name = "testTrigger"
+    name = "TestTriggering"
   }]
   persistDataName = "testOutput2"
 }]
