--- a/couchbase-store/pom.xml
+++ b/couchbase-store/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>trapezium-couchbase-store</artifactId>
     
     <properties>
-        <cache.version>1.0.0-SNAPSHOT</cache.version>
+        <cache.version>1.1.0-SNAPSHOT</cache.version>
         <couch.client.version>1.4.5</couch.client.version>
         <couch.mock.version>1.4.3</couch.mock.version>
         <slf4j.version>1.7.0</slf4j.version>
@@ -95,7 +95,7 @@
 
         <dependency>
             <groupId>com.verizon.bda</groupId>
-            <artifactId>cache</artifactId>
+            <artifactId>trapezium-cache</artifactId>
             <version>${cache.version}</version>
         </dependency>
 
