--- a/license-stub/pom.xml
+++ b/license-stub/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.verizon.bda</groupId>
-		<artifactId>commons-parent</artifactId>
-		<version>0.3.8-SNAPSHOT</version>
+		<artifactId>trapezium-parent</artifactId>
+		<version>1.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
