--- a/framework/src/main/resources/local_app_mgr.conf
+++ b/framework/src/main/resources/local_app_mgr.conf
@@ -58,6 +58,7 @@ kafkaConf = {
   value.serializer = "org.apache.kafka.common.serialization.StringSerializer"
   acks.config = "0"
   retries.config = "0"
+  group.id ="testgroup"
 }
 
 hadoopConf = {
