--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -16,12 +16,21 @@
         
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>6.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.54</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.binary.version}</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
-                
-                <dependency>
+		<dependency>
                         <groupId>org.apache.spark</groupId>
                         <artifactId>spark-mllib_${scala.binary.version}</artifactId>
                         <version>${spark.version}</version>
