--- a/license-stub/pom.xml
+++ b/license-stub/pom.xml
@@ -6,13 +6,12 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
     <artifactId>license</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.1-STUB</version>
     <name>License Library Stub</name>
         
     <properties>
