--- a/dal/src/main/resources/solrLucen.conf
+++ b/dal/src/main/resources/solrLucen.conf
@@ -1,8 +1,10 @@
 appName="sps"
-solrConfigFiles=["shema.xml","solr.xml"]
+solrConfigName="/solr/sps"
 zookeeperList=["localhost:2181","localhost1:2181"]
 solrIndexPathOnHdfs=""
 solrNodes=[]
+shardCount=5
+replication=3
 user="bhardab"
 password="Ver1z0n123"
 host="md-bdadev-7.verizon.com"
