--- a/dal/src/main/resources/solrLucen.conf
+++ b/dal/src/main/resources/solrLucen.conf
@@ -1,10 +1,39 @@
+//appName="sps"
+//solrConfigName="/solr/sps"
+//zkHosts=["md-bdadev-15.verizon.com:2181","md-bdadev-14.verizon.com:2181","md-bdadev-26.verizon.com:2181"]
+//solrIndexPathOnHdfs=""
+//solrNodes=[]
+//shardCount=5
+//replication=3
+////user="bhardab"
+////password="Ver1z0n123"
+//user="poosave"
+//password="31Venkatesh"
+//host="md-bdadev-7.verizon.com"
+//aliasName="sps_current"
+//folderPrefix="/part-"
+//nameNode="md-bdadev-14.verizon.com:8020"
+//indexFilesPath="/user/will/orionprocessed/subprofile/luceneIndex/2017-07-18/monthlyView/index"
+
 appName="sps"
 solrConfigName="/solr/sps"
-zookeeperList=["localhost:2181","localhost1:2181"]
+zkHosts=["md-bdadev-15.verizon.com:2181","md-bdadev-14.verizon.com:2181","md-bdadev-26.verizon.com:2181"]
+//"md-bdadev-55.verizon.com","md-bdadev-56.verizon.com",
+solrNodeHosts=["md-bdadev-54.verizon.com","md-bdadev-57.verizon.com","md-bdadev-58.verizon.com"]
 solrIndexPathOnHdfs=""
-solrNodes=[]
 shardCount=5
 replication=3
-user="bhardab"
-password="Ver1z0n123"
+//user="bhardab"
+//password="Ver1z0n123"
+user="poosave"
+solrNodePassword="31Venkatesh"
 host="md-bdadev-7.verizon.com"
+aliasName="sps_current"
+hdfs="Saiphdevqa"
+nameNode="md-bdadev-14.verizon.com:8020"
+indexFilesPath="/user/will/orionprocessed/subprofile/luceneIndex/2017-07-18/monthlyView/index"
+dataDir="/data0/tmp/lucene/sps_local_dir"
+folderPrefix="/part-1"
+mothly_collection="sps_monthly"
+solrConfig="/data0/poosave/solrUploadTest/contextSensitiveSolrConfigs"
+temp="/tmp/sol
