for pull request

--- a/dal/src/main/resources/solrLucen.conf
+++ b/dal/src/main/resources/solrLucen.conf
@@ -21,7 +21,6 @@ zkHosts=["md-bdadev-15.verizon.com:2181","md-bdadev-14.verizon.com:2181","md-bda
 //"md-bdadev-55.verizon.com","md-bdadev-56.verizon.com",
 solrNodeHosts=["md-bdadev-54.verizon.com","md-bdadev-57.verizon.com","md-bdadev-58.verizon.com"]
 solrIndexPathOnHdfs=""
-shardCount=5
 replication=3
 //user="bhardab"
 //password="Ver1z0n123"
@@ -33,7 +32,7 @@ hdfs="Saiphdevqa"
 nameNode="md-bdadev-14.verizon.com:8020"
 indexFilesPath="/user/will/orionprocessed/subprofile/luceneIndex/2017-07-18/monthlyView/index"
 dataDir="/data0/tmp/lucene/sps_local_dir"
-folderPrefix="/part-1"
+folderPrefix="/part-11"
 mothly_collection="sps_monthly"
 solrConfig="/data0/poosave/solrUploadTest/contextSensitiveSolrConfigs"
-temp="/tmp/sol
+zroot="/solr2"
