--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -21,6 +21,11 @@
 			<version>5.5.4</version>
 		</dependency>
 		<dependency>
+			<groupId>org.scalaj</groupId>
+			<artifactId>scalaj-http_2.10</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.zeroturnaround</groupId>
 			<artifactId>zt-zip</artifactId>
 			<version>1.11</version>
