--- a/couchbase-store/pom.xml
+++ b/couchbase-store/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>trapezium-parent</artifactId>
         <groupId>com.verizon.bda</groupId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.verizon.bda</groupId>
             <artifactId>trapezium-cache</artifactId>
-            <version>${cache.version}</version>
+            <version>${trapezium.version}</version>
         </dependency>
 
 
