--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         
@@ -34,7 +34,7 @@
                 <dependency>
                     <groupId>com.verizon.bda</groupId>
                     <artifactId>license</artifactId>
-                    <version>0.1.0</version>
+					<version>${trapezium.version}</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -47,7 +47,7 @@
                 <dependency>
                     <groupId>com.verizon.bda</groupId>
                     <artifactId>license</artifactId>
-                    <version>0.0.1-STUB</version>
+					<version>${trapezium.version}</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -143,15 +143,15 @@
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>trapezium-couchbase-store</artifactId>
-			<version>1.1.0</version>
+			<version>${trapezium.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>trapezium-couchbase-store</artifactId>
-			<version>1.1.0</version>
 			<scope>test</scope>
 			<type>test-jar</type>
+			<version>${trapezium.version}</version>
 		</dependency>
 
 
