working code of local and hdfs

--- a/dal/src/main/resources/solrLucene.conf
+++ b/dal/src/main/resources/solrLucene.conf
@@ -1,11 +1,11 @@
 appName="palomar"
 zkHosts=["md-bdadev-79.verizon.com","md-bdadev-80.verizon.com","md-bdadev-82.verizon.com"]
-solrNodeHosts=["md-bdadev-54.verizon.com","md-bdadev-57.verizon.com","md-bdadev-58.verizon.com"]
-user="poosave"
+///solrNodeHosts=["md-bdadev-54.verizon.com","md-bdadev-57.verizon.com","md-bdadev-58.verizon.com"]
+//solruser="poosave"
 //nameNode="Saiphdevqa"
 nameNode="md-bdadev-15.verizon.com:8020"
 
-solrNodePassword="31Venkatesh"
+//solrNodePassword="31Venkatesh"
 folderPrefix="/part-"
 zroot="/solr"
 
@@ -30,6 +30,10 @@ zroot="/solr"
 //solrConfig="/data0/poosave/solrUploadTest/contextSensitiveSolrConfigs_daily/conf"
 
 
+aliasName, filePath, solrconfig, batchTime
+collectionPrefix = aliasName + batchTime
+
+SolrOps.upload(aliasName, indexFilesPath, workflowTime: Time)
 
 aliasName="sps_current_daily121"
 indexFilesPath="/user/palomar/luceneindex/solr/sps_daily_hdfs3"
