--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -15,25 +15,21 @@
 	<name>Trapezium dal library</name>
         
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-solrj</artifactId>
-			<version>6.5.1</version>
-		</dependency>
-		<dependency>
+	        <dependency>
+	                <groupId>org.apache.solr</groupId>
+	                <artifactId>solr-solrj</artifactId>
+	                <version>6.5.1</version>
+                        <exclusions>
+                          <exclusion>
+                            <groupId>org.jboss.netty</groupId>
+                            <artifactId>netty</artifactId>
+                          </exclusion>
+                        </exclusions>
+	        </dependency>
+                <dependency>
 			<groupId>org.scalaj</groupId>
 			<artifactId>scalaj-http_2.10</artifactId>
 			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.zeroturnaround</groupId>
-			<artifactId>zt-zip</artifactId>
-			<version>1.11</version>
-		</dependency>
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.54</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
