--- a/cassandra-dao/pom.xml
+++ b/cassandra-dao/pom.xml
@@ -5,7 +5,7 @@
     <parent>
       <groupId>com.verizon.bda</groupId>
       <artifactId>trapezium-parent</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -72,6 +72,4 @@
         <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
         <testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>
     </build>
-
-
 </project>
