--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>scalaj-http_2.10</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+                <dependency>
+                        <groupId>com.jcraft</groupId>
+                        <artifactId>jsch</artifactId>
+                        <version>0.1.54</version>
+                </dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.binary.version}</artifactId>
