--- a/framework/src/main/resources/kafkaBatchWorkFlow.conf
+++ b/framework/src/main/resources/kafkaBatchWorkFlow.conf
@@ -13,7 +13,7 @@ kafkaTopicInfo = {
   consumerGroup = "KafkaBatchGroup"
   maxRatePerPartition: 970
   batchTime = "5"
-  auto.offset.reset = "smallest"
+  auto.offset.reset = "earliest"
   streamsInfo = [{
     name = "hdfsStream"
     topicName = "kafkaTopic"
