--- a/cassandra-dao/pom.xml
+++ b/cassandra-dao/pom.xml
@@ -12,12 +12,9 @@
     <artifactId>trapezium-cassandra-dao</artifactId>
     <packaging>jar</packaging>
     <name>Trapezium Cassandra DAO</name>
-    
-    <properties>
-      <spark.version>1.6.0</spark.version>
-      <scala.binary.version>2.10</scala.binary.version>
-      <scala.version>2.10.5</scala.version>
 
+    <properties>
+        <trapezium.spark.version>2.1.0</trapezium.spark.version>
     </properties>
 
     <dependencies>
@@ -46,7 +43,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
-            <version>${spark.version}</version>
+            <version>${trapezium.spark.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>guava</artifactId>
