--- a/sparkcassandra-connector/pom.xml
+++ b/sparkcassandra-connector/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.datastax.spark</groupId>
             <artifactId>spark-cassandra-connector_2.10</artifactId>
-            <version>1.6.0-M1</version>
+            <version>2.0.1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>guava</artifactId>
