--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>sparkcassandra-connector</module>
     <module>couchbase-store</module>
     <module>license-stub</module>
+    <module>simulation</module>
   </modules>
   
   <properties>
