removed dependency on authorization services and ws02 authorization.

--- a/api-akkahttp/src/test/resources/application.conf
+++ b/api-akkahttp/src/test/resources/application.conf
@@ -1,6 +1,6 @@
 apisvcs.akka.http.testendpoint1 = "apisvcstest1"
 apisvcs.akka.http.testendpoint2 = "apisvcstest2"
-apisvcs.akka.http.testendpoint.authorizer = "wso2"
+apisvcs.akka.http.testendpoint.authorizer = "federated"
 apisvcs.akka.http.port = 7111
 apisvcs.akka.http.testbindingport=7111
 apisvcs.akka.http.resource.testendpoint1 = "testapi"
