--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.verizon.bda.apisvcs</groupId>
     <artifactId>commons-api</artifactId>
     <version>1.2.0-SNAPSHOT</version>
-   <name>Verizon commons-api library</name>
+   <name>Verizon api library</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
