--- a/api-akkahttp/example/pom.xml
+++ b/api-akkahttp/example/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.verizon.bda.apisvcs</groupId>
+    <groupId>com.verizon.trapezium.api</groupId>
     <artifactId>akkahttp-example</artifactId>
     <version>0.0.1</version>
-   <name>commons api akka http example services</name>
+   <name>Trapezium api akka http example services</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -45,15 +45,15 @@
             <version>1.3.0</version>
         </dependency>
         <dependency>
-            <groupId>com.verizon.bda.apisvcs</groupId>
-            <artifactId>commons-api</artifactId>
-            <version>0.0.1</version>
+            <groupId>com.verizon.trapezium.api</groupId>
+            <artifactId>api</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.verizon.bda.apisvcs</groupId>
+            <groupId>com.verizon.trapezium.api.akkahttp</groupId>
             <artifactId>api-akkahttp</artifactId>
-            <version>0.0.1</version>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -72,16 +72,6 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.20</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.20</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
