--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,10 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.verizon.bda.apisvcs</groupId>
-    <artifactId>commons-api</artifactId>
+    <parent>
+        <groupId>com.verizon.bda</groupId>
+        <artifactId>trapezium-parent</artifactId>
+        <version>1.2.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <groupId>com.verizon.trapezium.api</groupId>
+    <artifactId>api</artifactId>
     <version>1.2.0-SNAPSHOT</version>
-   <name>Verizon api library</name>
+   <name>Verizon Trapezium api library</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
