--- a/framework/src/main/resources/local_app_mgr.conf
+++ b/framework/src/main/resources/local_app_mgr.conf
@@ -57,6 +57,7 @@ kafkaConf = {
   key.serializer = "org.apache.kafka.common.serialization.StringSerializer"
   value.serializer = "org.apache.kafka.common.serialization.StringSerializer"
   acks.config = "0"
+  enable.auto.commit=false
   retries.config = "0"
 }
 
