modified as per review comments.

--- a/api-akkahttp/example/src/main/resources/application.conf
+++ b/api-akkahttp/example/src/main/resources/application.conf
@@ -3,8 +3,9 @@ apisvcs.unsupported.endpoint="{\"status\" : \"error\" , \"msg\"  : \"Page not fo
 apisvcs.failed.request.message="{\"status\" : \"error\" , \"msg\"  : \"request processing failed\"}"
 apisvcs.failed.noauthorizer.message="{\"status\" : \"error\" , \"msg\"  : \"request processing failed no valid authorizer\"}"
 apisvcs.examplesvcs.endpoint.topublish="samplesvcs"
-apisvcs.examplesvcs.route.authorizer="wso2"
-apisvcs.examplesvcs.bindingport = 7722
+apisvcs.examplesvcs.route.authorizer="federated"
+apisvcs.examplesvcs.bindingport=7722
+apisvcs.akka.http.port = 7722
 apisvcs.endpoint.examplesvcs.resource="sample"
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
