--- a/api-akkahttp/pom.xml
+++ b/api-akkahttp/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.verizon.trapezium.api.akkahttp</groupId>
     <artifactId>api-akkahttp</artifactId>
     <version>1.2.0-SNAPSHOT</version>
-   <name>Verizon Trapezium akka http api services</name>
+   <name>Trapezium akka http api services</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -53,8 +53,8 @@
             <version>1.3.0</version>
         </dependency>
         <dependency>
-            <groupId>com.verizon.bda.api</groupId>
-            <artifactId>api</artifactId>
+            <groupId>com.verizon.trapezium.api</groupId>
+            <artifactId>trapezium-api</artifactId>
             <version>1.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
