--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         
@@ -48,7 +48,7 @@
                 <dependency>
                     <groupId>com.verizon.bda</groupId>
                     <artifactId>trapezium-license</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>1.2.0</version>
                 </dependency>
             </dependencies>
         </profile>
