--- a/api-akkahttp/pom.xml
+++ b/api-akkahttp/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.verizon.bda.apisvcs</groupId>
     <artifactId>api-akkahttp</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
    <name>Akka http api services</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
