--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -48,7 +48,7 @@
                 <dependency>
                     <groupId>com.verizon.bda</groupId>
                     <artifactId>trapezium-license</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>${trapezium.version}</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -144,6 +144,11 @@
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>trapezium-couchbase-store</artifactId>
+			<version>${trapezium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.verizon.bda</groupId>
+			<artifactId>trapezium-license</artifactId>
 			<version>${trapezium.version}</version>
 		</dependency>
 
