--- a/simulation/pom.xml
+++ b/simulation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>trapezium-parent</artifactId>
         <groupId>com.verizon.bda</groupId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.4.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,14 +17,14 @@
         <dependency>
             <groupId>com.verizon.bda</groupId>
             <artifactId>trapezium-framework</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.verizon.bda</groupId>
             <artifactId>trapezium-framework</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
-            <version>${version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
