Adapt the created BlockRDD to support the HasOffsetRanges

--- a/cassandra-dao/pom.xml
+++ b/cassandra-dao/pom.xml
@@ -49,6 +49,10 @@
                     <artifactId>guava</artifactId>
                     <groupId>com.google.guava</groupId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!-- Testing dependencies  -->
