--- a/framework/src/main/resources/couch.conf
+++ b/framework/src/main/resources/couch.conf
@@ -1,7 +1,7 @@
-cbc.url= "http://cbc:8091/pools"
+cbc.url= "http://localhost:8091/pools"
 #rest-cache
 cbc.pcache.bucket=t11
-cbc.pcache.pwd=pwd
+cbc.pcache.pwd=""
 #global app cache
 default.app.name="GlobalApps"
 cbc.gcache.pwd= ""
