Adding the capability to configure the kafka parameters

--- a/framework/src/main/resources/kafkaPassThroughWorkFlow.conf
+++ b/framework/src/main/resources/kafkaPassThroughWorkFlow.conf
@@ -17,6 +17,10 @@ kafkaTopicInfo = {
   maxRatePerPartition: 970
   batchTime = "5"
   auto.offset.reset = "earliest"
+  consumerParams = {
+    test="set"
+    session.timeout.ms=1000
+  }
   streamsInfo = [{
     name = "hdfsStream"
     topicName = "kafkaTopic"
